labs/beginner/02-nginx-gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: beginner-nginx
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
