labs/beginner/02-nginx-gateway/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: beginner-nginx
spec:
  parentRefs:
    - name: public-gateway
      namespace: platform-gateway
  rules:
    - backendRefs:
        - name: nginx
          port: 80
